@@ -1,6 +1,8 @@
 * 2014-10-16 - thorben.betten@open-xchange.com
 
  - Fix for bug 34995: Removed Dropbox and Box.com remnants from packaging
+ - Fix for bug 34985: Restrictive reading of configuration and improved logging in case a .properties file contains a malformed Unicode
+                      escape sequence
 
 * 2014-10-15 - martin.herfurth@open-xchange.com
 
